hphp/test/zend/bad/Zend/tests/bug43343.php.expectf
Parse error: %s error%sexpecting%sT_NS_SEPARATOR%sin %sbug43343.php on line 5